# fight_the_landlord

./: CMakeLists.txt  animationwindow.cpp  animationwindow.h  bgmcontrol.cpp  bgmcontrol.h  buttongroup.cpp  buttongroup.h  buttongroup.ui  card.cpp  card.h  cardpanel.cpp  cardpanel.h  cards.cpp  cards.h  countdown.cpp  gamecontrol.cpp  gamecontrol.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playahand.cpp  playahand.h  player.cpp  player.h  res.qrc  robot.cpp  robot.h  scorepanel.cpp  scorepanel.h  scorepanel.ui  strategy.cpp  strategy.h  userplayer.cpp  userplayer.h
